--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@orgajs/reorg": "^4.3.1",
     "@orgajs/reorg-rehype": "^4.3.2",
+    "@supabase/supabase-js": "^2.76.1",
     "marked": "^16.4.1",
     "rehype-stringify": "^10.0.1"
   }
